--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -5,8 +7,15 @@
 :root{
     --cor_principal: #EBECEE;
     --cor_secundaria: #FFFFFF;
+    --cor_titulo_hamburguer: #EB9B00;
+    --cor_topico_hamburguer: linear-gradient(98deg, #002F52 35.49%, #326589 165.37%);
+
+    --fonte_principal: 'Poppins', sans-serif;
 }
 body{
     background-color: var(--cor_principal);
     box-sizing: border-box;
+    font-family: var(--fonte_principal);
+    font-weight: 400;
+    font-size: 1rem;
 }
