--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;300;400;500;600;700&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -11,6 +11,7 @@
     --azul: #002F52;
     --cor_topico_hamburguer: linear-gradient(98deg, #002F52 35.49%, #326589 165.37%);
     --fonte_principal: 'Poppins', sans-serif;
+    --fonte_secundaria: font-family: 'Josefin Sans', sans-serif;
 }
 body{
     background-color: var(--cor_principal);
