--- a/style/baner.css
+++ b/style/baner.css
@@ -11,3 +11,18 @@
 .baner_texto{
     font-weight: 500;
 }
+
+@media screen and (min-width: 1024px){
+    .baner_pesquisa{
+        width: 50%;
+    }
+
+    .baner h2{
+        font-size: 36px;
+    }
+
+    .baner_pesquisa::placeholder{
+        background-position: 4em;
+        font-size: 16px;
+    }
+}
