--- a/style/style.css
+++ b/style/style.css
@@ -9,6 +9,7 @@
     --cor_secundaria: #FFFFFF;
     --cor_titulo_hamburguer: #EB9B00;
     --cinza: #EBECEE;
+    --cinza_escuro: #474646;
     --azul: #002F52;
     --cor_topico_hamburguer: linear-gradient(98deg, #002F52 35.49%, #326589 165.37%);
     --fonte_principal: 'Poppins', sans-serif;
