--- a/style/camera.css
+++ b/style/camera.css
@@ -19,7 +19,7 @@ body{
 
 .container{
     text-align: center;
-    margin: 10%;
+    margin: 10%
 }
 
 .titulo_camera{
@@ -37,5 +37,67 @@ body{
     border: solid 1px black;
     font-size: 1.2rem;
     background-color: #f48f8482;
+}
 
+.formulario_camera{
+     display: none; 
+}
+
+.formulario_mensagem{
+     display: none; 
+}
+
+.formulario_mensagem p{
+    margin-top: 1em;
+    font-size: 1.2rem;
+}
+
+.abrir_conta{
+    margin-top: 1em;
+    text-decoration: none;
+    color: black;
+    background-color: #f48f8482;
+    border: solid 1px orange;
+    border-radius: 24px;
+    padding: 1em;
+    font-weight: bold;
+}
+
+@media screen and (min-width: 1024px){
+    .imagem_rosto{
+        width: 15em;
+        height: 20em;
+    }
+
+    .titulo_camera{
+        font-size: 4rem ;
+    }
+    
+    .paragrafo_camera{
+        font-size: 2rem;
+    }
+
+    .formulario_camera{
+        
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .reconhecimento_facial{
+        width: 20em;
+        height: 25em;
+    }
+
+    .formulario_mensagem{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .formulario_mensagem img{
+        margin-top: 2em;
+    }
+
+    .formulario_mensagem p{
+        font-size: 2em;
+    }
 }
