--- a/style/fimCadastro.css
+++ b/style/fimCadastro.css
@@ -55,6 +55,11 @@ body{
 }
 
 @media screen and (min-width: 1024px){
+    .container{
+        width: auto 0;
+        margin: 20%;
+    }
+
     .container_titulo{
         text-align: center;
         font-size: 4rem;
@@ -78,26 +83,32 @@ body{
 }
 
 @media screen and (min-width: 1728px){
+
+    .container{
+        width: auto 0;
+        margin: 20%;
+    }
+
     .container_titulo{
         text-align: center;
-        font-size: 4rem;
+        font-size: 3rem;
     }
     
     .container_paragrafo{
-        font-size: 3rem;
+        font-size: 2rem;
     }
     
     .container_imagem{
         margin-top: 1rem;
-        width:50%;
+        width:40%;
         margin: 1em auto;
         border-radius: 24px;
         
     }
 
     .botao_voltar{
-        font-size: 2em;
-        width:60%;
+        font-size: 1.5em;
+        width:40%;
         margin: 1em auto;
     }
 }
